parser.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier ID SEMICOLON
    7                | type_specifier ID LBRACKET NUM RBRACKET SEMICOLON

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier ID LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: type_specifier ID
   16      | type_specifier ID LBRACKET RBRACKET

   17 compound_stmt: LBRACE local_declarations statement_list RBRACE

   18 local_declarations: local_declarations var_declaration
   19                   | %empty

   20 statement_list: statement_list statement
   21               | %empty

   22 statement: expression_stmt
   23          | compound_stmt
   24          | selection_stmt
   25          | iteration_stmt
   26          | return_stmt

   27 expression_stmt: expression SEMICOLON
   28                | SEMICOLON

   29 selection_stmt: IF LPAREN expression RPAREN statement
   30               | IF LPAREN expression RPAREN statement ELSE statement

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement

   32 return_stmt: RETURN SEMICOLON
   33            | RETURN expression SEMICOLON

   34 expression: var ASSIGN expression
   35           | simple_expression

   36 var: ID
   37    | ID LBRACKET expression RBRACKET

   38 simple_expression: additive_expression relop additive_expression
   39                  | additive_expression

   40 relop: LESSTHAN
   41      | LESSTHANEQ
   42      | GREATERTHAN
   43      | GREATERTHANEQ
   44      | EQUAL
   45      | NOTEQUAL

   46 additive_expression: additive_expression addop term
   47                    | term

   48 addop: PLUS
   49      | MINUS

   50 term: term mulop factor
   51     | factor

   52 mulop: MULTIPLY
   53      | DIVIDE

   54 factor: LPAREN expression RPAREN
   55       | var
   56       | call
   57       | NUM

   58 call: ID LPAREN args RPAREN

   59 args: arg_list
   60     | %empty

   61 arg_list: arg_list COMMA expression
   62         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ERROR (258)
IF (259) 29 30
ELSE (260) 30
RETURN (261) 32 33
WHILE (262) 31
INT (263) 8
VOID (264) 9 12
PLUS (265) 48
MINUS (266) 49
MULTIPLY (267) 52
DIVIDE (268) 53
LESSTHAN (269) 40
LESSTHANEQ (270) 41
GREATERTHAN (271) 42
GREATERTHANEQ (272) 43
EQUAL (273) 44
NOTEQUAL (274) 45
ASSIGN (275) 34
SEMICOLON (276) 6 7 27 28 32 33
COMMA (277) 13 61
LPAREN (278) 10 29 30 31 54 58
RPAREN (279) 10 29 30 31 54 58
LBRACKET (280) 7 16 37
RBRACKET (281) 7 16 37
LBRACE (282) 17
RBRACE (283) 17
ID (284) 6 7 10 15 16 36 37 58
NUM (285) 7 57


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
declaration_list (33)
    on left: 2 3, on right: 1 2
declaration (34)
    on left: 4 5, on right: 2 3
var_declaration (35)
    on left: 6 7, on right: 4 18
type_specifier (36)
    on left: 8 9, on right: 6 7 10 15 16
fun_declaration (37)
    on left: 10, on right: 5
params (38)
    on left: 11 12, on right: 10
param_list (39)
    on left: 13 14, on right: 11 13
param (40)
    on left: 15 16, on right: 13 14
compound_stmt (41)
    on left: 17, on right: 10 23
local_declarations (42)
    on left: 18 19, on right: 17 18
statement_list (43)
    on left: 20 21, on right: 17 20
statement (44)
    on left: 22 23 24 25 26, on right: 20 29 30 31
expression_stmt (45)
    on left: 27 28, on right: 22
selection_stmt (46)
    on left: 29 30, on right: 24
iteration_stmt (47)
    on left: 31, on right: 25
return_stmt (48)
    on left: 32 33, on right: 26
expression (49)
    on left: 34 35, on right: 27 29 30 31 33 34 37 54 61 62
var (50)
    on left: 36 37, on right: 34 55
simple_expression (51)
    on left: 38 39, on right: 35
relop (52)
    on left: 40 41 42 43 44 45, on right: 38
additive_expression (53)
    on left: 46 47, on right: 38 39 46
addop (54)
    on left: 48 49, on right: 46
term (55)
    on left: 50 51, on right: 46 47 50
mulop (56)
    on left: 52 53, on right: 50
factor (57)
    on left: 54 55 56 57, on right: 50 51
call (58)
    on left: 58, on right: 56
args (59)
    on left: 59 60, on right: 58
arg_list (60)
    on left: 61 62, on right: 59 61


State 0

    0 $accept: . program $end
    1 program: . declaration_list
    2 declaration_list: . declaration_list declaration
    3                 | . declaration
    4 declaration: . var_declaration
    5            | . fun_declaration
    6 var_declaration: . type_specifier ID SEMICOLON
    7                | . type_specifier ID LBRACKET NUM RBRACKET SEMICOLON
    8 type_specifier: . INT
    9               | . VOID
   10 fun_declaration: . type_specifier ID LPAREN params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

    8 type_specifier: INT .

    $default  reduce using rule 8 (type_specifier)


State 2

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .  [$end]
    2 declaration_list: declaration_list . declaration
    4 declaration: . var_declaration
    5            | . fun_declaration
    6 var_declaration: . type_specifier ID SEMICOLON
    7                | . type_specifier ID LBRACKET NUM RBRACKET SEMICOLON
    8 type_specifier: . INT
    9               | . VOID
   10 fun_declaration: . type_specifier ID LPAREN params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    6 var_declaration: type_specifier . ID SEMICOLON
    7                | type_specifier . ID LBRACKET NUM RBRACKET SEMICOLON
   10 fun_declaration: type_specifier . ID LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 11

    6 var_declaration: type_specifier ID . SEMICOLON
    7                | type_specifier ID . LBRACKET NUM RBRACKET SEMICOLON
   10 fun_declaration: type_specifier ID . LPAREN params RPAREN compound_stmt

    SEMICOLON  shift, and go to state 12
    LPAREN     shift, and go to state 13
    LBRACKET   shift, and go to state 14


State 12

    6 var_declaration: type_specifier ID SEMICOLON .

    $default  reduce using rule 6 (var_declaration)


State 13

    8 type_specifier: . INT
    9               | . VOID
   10 fun_declaration: type_specifier ID LPAREN . params RPAREN compound_stmt
   11 params: . param_list
   12       | . VOID
   13 param_list: . param_list COMMA param
   14           | . param
   15 param: . type_specifier ID
   16      | . type_specifier ID LBRACKET RBRACKET

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    type_specifier  go to state 16
    params          go to state 17
    param_list      go to state 18
    param           go to state 19


State 14

    7 var_declaration: type_specifier ID LBRACKET . NUM RBRACKET SEMICOLON

    NUM  shift, and go to state 20


State 15

    9 type_specifier: VOID .  [ID]
   12 params: VOID .  [RPAREN]

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (type_specifier)


State 16

   15 param: type_specifier . ID
   16      | type_specifier . ID LBRACKET RBRACKET

    ID  shift, and go to state 21


State 17

   10 fun_declaration: type_specifier ID LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 22


State 18

   11 params: param_list .  [RPAREN]
   13 param_list: param_list . COMMA param

    COMMA  shift, and go to state 23

    $default  reduce using rule 11 (params)


State 19

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


State 20

    7 var_declaration: type_specifier ID LBRACKET NUM . RBRACKET SEMICOLON

    RBRACKET  shift, and go to state 24


State 21

   15 param: type_specifier ID .  [COMMA, RPAREN]
   16      | type_specifier ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 15 (param)


State 22

   10 fun_declaration: type_specifier ID LPAREN params RPAREN . compound_stmt
   17 compound_stmt: . LBRACE local_declarations statement_list RBRACE

    LBRACE  shift, and go to state 26

    compound_stmt  go to state 27


State 23

    8 type_specifier: . INT
    9               | . VOID
   13 param_list: param_list COMMA . param
   15 param: . type_specifier ID
   16      | . type_specifier ID LBRACKET RBRACKET

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 16
    param           go to state 28


State 24

    7 var_declaration: type_specifier ID LBRACKET NUM RBRACKET . SEMICOLON

    SEMICOLON  shift, and go to state 29


State 25

   16 param: type_specifier ID LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 30


State 26

   17 compound_stmt: LBRACE . local_declarations statement_list RBRACE
   18 local_declarations: . local_declarations var_declaration
   19                   | . %empty

    $default  reduce using rule 19 (local_declarations)

    local_declarations  go to state 31


State 27

   10 fun_declaration: type_specifier ID LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 10 (fun_declaration)


State 28

   13 param_list: param_list COMMA param .

    $default  reduce using rule 13 (param_list)


State 29

    7 var_declaration: type_specifier ID LBRACKET NUM RBRACKET SEMICOLON .

    $default  reduce using rule 7 (var_declaration)


State 30

   16 param: type_specifier ID LBRACKET RBRACKET .

    $default  reduce using rule 16 (param)


State 31

    6 var_declaration: . type_specifier ID SEMICOLON
    7                | . type_specifier ID LBRACKET NUM RBRACKET SEMICOLON
    8 type_specifier: . INT
    9               | . VOID
   17 compound_stmt: LBRACE local_declarations . statement_list RBRACE
   18 local_declarations: local_declarations . var_declaration
   20 statement_list: . statement_list statement
   21               | . %empty  [IF, RETURN, WHILE, SEMICOLON, LPAREN, LBRACE, RBRACE, ID, NUM]

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_list)

    var_declaration  go to state 32
    type_specifier   go to state 33
    statement_list   go to state 34


State 32

   18 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 18 (local_declarations)


State 33

    6 var_declaration: type_specifier . ID SEMICOLON
    7                | type_specifier . ID LBRACKET NUM RBRACKET SEMICOLON

    ID  shift, and go to state 35


State 34

   17 compound_stmt: . LBRACE local_declarations statement_list RBRACE
   17              | LBRACE local_declarations statement_list . RBRACE
   20 statement_list: statement_list . statement
   22 statement: . expression_stmt
   23          | . compound_stmt
   24          | . selection_stmt
   25          | . iteration_stmt
   26          | . return_stmt
   27 expression_stmt: . expression SEMICOLON
   28                | . SEMICOLON
   29 selection_stmt: . IF LPAREN expression RPAREN statement
   30               | . IF LPAREN expression RPAREN statement ELSE statement
   31 iteration_stmt: . WHILE LPAREN expression RPAREN statement
   32 return_stmt: . RETURN SEMICOLON
   33            | . RETURN expression SEMICOLON
   34 expression: . var ASSIGN expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    IF         shift, and go to state 36
    RETURN     shift, and go to state 37
    WHILE      shift, and go to state 38
    SEMICOLON  shift, and go to state 39
    LPAREN     shift, and go to state 40
    LBRACE     shift, and go to state 26
    RBRACE     shift, and go to state 41
    ID         shift, and go to state 42
    NUM        shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 45
    expression_stmt      go to state 46
    selection_stmt       go to state 47
    iteration_stmt       go to state 48
    return_stmt          go to state 49
    expression           go to state 50
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 35

    6 var_declaration: type_specifier ID . SEMICOLON
    7                | type_specifier ID . LBRACKET NUM RBRACKET SEMICOLON

    SEMICOLON  shift, and go to state 12
    LBRACKET   shift, and go to state 14


State 36

   29 selection_stmt: IF . LPAREN expression RPAREN statement
   30               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 57


State 37

   32 return_stmt: RETURN . SEMICOLON
   33            | RETURN . expression SEMICOLON
   34 expression: . var ASSIGN expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    SEMICOLON  shift, and go to state 58
    LPAREN     shift, and go to state 40
    ID         shift, and go to state 42
    NUM        shift, and go to state 43

    expression           go to state 59
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 38

   31 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 60


State 39

   28 expression_stmt: SEMICOLON .

    $default  reduce using rule 28 (expression_stmt)


State 40

   34 expression: . var ASSIGN expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   54       | LPAREN . expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    expression           go to state 61
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 41

   17 compound_stmt: LBRACE local_declarations statement_list RBRACE .

    $default  reduce using rule 17 (compound_stmt)


State 42

   36 var: ID .  [PLUS, MINUS, MULTIPLY, DIVIDE, LESSTHAN, LESSTHANEQ, GREATERTHAN, GREATERTHANEQ, EQUAL, NOTEQUAL, ASSIGN, SEMICOLON, COMMA, RPAREN, RBRACKET]
   37    | ID . LBRACKET expression RBRACKET
   58 call: ID . LPAREN args RPAREN

    LPAREN    shift, and go to state 62
    LBRACKET  shift, and go to state 63

    $default  reduce using rule 36 (var)


State 43

   57 factor: NUM .

    $default  reduce using rule 57 (factor)


State 44

   23 statement: compound_stmt .

    $default  reduce using rule 23 (statement)


State 45

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 46

   22 statement: expression_stmt .

    $default  reduce using rule 22 (statement)


State 47

   24 statement: selection_stmt .

    $default  reduce using rule 24 (statement)


State 48

   25 statement: iteration_stmt .

    $default  reduce using rule 25 (statement)


State 49

   26 statement: return_stmt .

    $default  reduce using rule 26 (statement)


State 50

   27 expression_stmt: expression . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 51

   34 expression: var . ASSIGN expression
   55 factor: var .  [PLUS, MINUS, MULTIPLY, DIVIDE, LESSTHAN, LESSTHANEQ, GREATERTHAN, GREATERTHANEQ, EQUAL, NOTEQUAL, SEMICOLON, COMMA, RPAREN, RBRACKET]

    ASSIGN  shift, and go to state 65

    $default  reduce using rule 55 (factor)


State 52

   35 expression: simple_expression .

    $default  reduce using rule 35 (expression)


State 53

   38 simple_expression: additive_expression . relop additive_expression
   39                  | additive_expression .  [SEMICOLON, COMMA, RPAREN, RBRACKET]
   40 relop: . LESSTHAN
   41      | . LESSTHANEQ
   42      | . GREATERTHAN
   43      | . GREATERTHANEQ
   44      | . EQUAL
   45      | . NOTEQUAL
   46 additive_expression: additive_expression . addop term
   48 addop: . PLUS
   49      | . MINUS

    PLUS           shift, and go to state 66
    MINUS          shift, and go to state 67
    LESSTHAN       shift, and go to state 68
    LESSTHANEQ     shift, and go to state 69
    GREATERTHAN    shift, and go to state 70
    GREATERTHANEQ  shift, and go to state 71
    EQUAL          shift, and go to state 72
    NOTEQUAL       shift, and go to state 73

    $default  reduce using rule 39 (simple_expression)

    relop  go to state 74
    addop  go to state 75


State 54

   47 additive_expression: term .  [PLUS, MINUS, LESSTHAN, LESSTHANEQ, GREATERTHAN, GREATERTHANEQ, EQUAL, NOTEQUAL, SEMICOLON, COMMA, RPAREN, RBRACKET]
   50 term: term . mulop factor
   52 mulop: . MULTIPLY
   53      | . DIVIDE

    MULTIPLY  shift, and go to state 76
    DIVIDE    shift, and go to state 77

    $default  reduce using rule 47 (additive_expression)

    mulop  go to state 78


State 55

   51 term: factor .

    $default  reduce using rule 51 (term)


State 56

   56 factor: call .

    $default  reduce using rule 56 (factor)


State 57

   29 selection_stmt: IF LPAREN . expression RPAREN statement
   30               | IF LPAREN . expression RPAREN statement ELSE statement
   34 expression: . var ASSIGN expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    expression           go to state 79
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 58

   32 return_stmt: RETURN SEMICOLON .

    $default  reduce using rule 32 (return_stmt)


State 59

   33 return_stmt: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 60

   31 iteration_stmt: WHILE LPAREN . expression RPAREN statement
   34 expression: . var ASSIGN expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    expression           go to state 81
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 61

   54 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 82


State 62

   34 expression: . var ASSIGN expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN
   58     | ID LPAREN . args RPAREN
   59 args: . arg_list
   60     | . %empty  [RPAREN]
   61 arg_list: . arg_list COMMA expression
   62         | . expression

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    $default  reduce using rule 60 (args)

    expression           go to state 83
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56
    args                 go to state 84
    arg_list             go to state 85


State 63

   34 expression: . var ASSIGN expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   37    | ID LBRACKET . expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    expression           go to state 86
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 64

   27 expression_stmt: expression SEMICOLON .

    $default  reduce using rule 27 (expression_stmt)


State 65

   34 expression: . var ASSIGN expression
   34           | var ASSIGN . expression
   35           | . simple_expression
   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: . additive_expression relop additive_expression
   39                  | . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    expression           go to state 87
    var                  go to state 51
    simple_expression    go to state 52
    additive_expression  go to state 53
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 66

   48 addop: PLUS .

    $default  reduce using rule 48 (addop)


State 67

   49 addop: MINUS .

    $default  reduce using rule 49 (addop)


State 68

   40 relop: LESSTHAN .

    $default  reduce using rule 40 (relop)


State 69

   41 relop: LESSTHANEQ .

    $default  reduce using rule 41 (relop)


State 70

   42 relop: GREATERTHAN .

    $default  reduce using rule 42 (relop)


State 71

   43 relop: GREATERTHANEQ .

    $default  reduce using rule 43 (relop)


State 72

   44 relop: EQUAL .

    $default  reduce using rule 44 (relop)


State 73

   45 relop: NOTEQUAL .

    $default  reduce using rule 45 (relop)


State 74

   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   38 simple_expression: additive_expression relop . additive_expression
   46 additive_expression: . additive_expression addop term
   47                    | . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    var                  go to state 88
    additive_expression  go to state 89
    term                 go to state 54
    factor               go to state 55
    call                 go to state 56


State 75

   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   46 additive_expression: additive_expression addop . term
   50 term: . term mulop factor
   51     | . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    var     go to state 88
    term    go to state 90
    factor  go to state 55
    call    go to state 56


State 76

   52 mulop: MULTIPLY .

    $default  reduce using rule 52 (mulop)


State 77

   53 mulop: DIVIDE .

    $default  reduce using rule 53 (mulop)


State 78

   36 var: . ID
   37    | . ID LBRACKET expression RBRACKET
   50 term: term mulop . factor
   54 factor: . LPAREN expression RPAREN
   55       | . var
   56       | . call
   57       | . NUM
   58 call: . ID LPAREN args RPAREN

    LPAREN  shift, and go to state 40
    ID      shift, and go to state 42
    NUM     shift, and go to state 43

    var     go to state 88
    factor  go to state 91
    call    go to state 56


State 79

   29 selection_stmt: IF LPAREN expression . RPAREN statement
   30               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 92


State 80

   33 return_stmt: RETURN expression SEMICOLON .

    $default  reduce using rule 33 (return_stmt)


State 81

   31 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 93


State 82

   54 factor: LPAREN expression RPAREN .

    $default  reduce using rule 54 (factor)


State 83

   62 arg_list: expression .

    $default  reduce using rule 62 (arg_list)


State 84

   58 call: ID LPAREN args . RPAREN

    RPAREN  shift, and go to state 94


State 85

   59 args: arg_list .  [RPAREN]
   61 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 95

    $default  reduce using rule 59 (args)


State 86

   37 var: ID LBRACKET expression . RBRACKET

    RBRACKET  shift, and go to state 96


State 87

   34 expression: var ASSIGN expression .

    $default  reduce using rule 34 (expression)


State 88

   55 factor: var .

    $default  reduce using rule 55 (factor)


State 89

   38 simple_expression: additive_expression relop additive_expression .  [SEMICOLON, COMMA, RPAREN, RBRACKET]
   46 additive_expression: additive_expression . addop term
   48 addop: . PLUS
   49      | . MINUS

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 38 (simple_expression)

    addop  go to state 75


State 90

   46 additive_expression: additive_expression addop term .  [PLUS, MINUS, LESSTHAN, LESSTHANEQ, GREATERTHAN, GREATERTHANEQ, EQUAL, NOTEQUAL, SEMICOLON, COMMA, RPAREN, RBRACKET]
   50 term: term . mulop factor
   52 mulop: . MULTIPLY
   53      | . DIVIDE

    MULTIPLY  shift, and go to state 76
    DIVIDE    shift, and go to state 77

    $default  reduce using rule 46 (additive_expression)
